主题imtx手机版本模板更新
采用zblog的移动版本模板，并加入一些自己的想法，使样式更加美观

--- a/app/themes/imtx/templates/mobile/archives.html
+++ b/app/themes/imtx/templates/mobile/archives.html
@@ -2,11 +2,11 @@
 
 {% block title %}Monthly Archives: {{ year }}-{{ month }}{% if pagination.page>1 %}_第{{ pagination.page }}页{% endif %}{% endblock %}
 
-{% block head_extend %}
-    <link rel="canonical" href="{{ url_for('main.archives', year=year, month=month, _external=True) }}" >
-{% endblock %}
+{% block head_extend -%}
+  <link rel="canonical" href="{{ url_for('main.archives', year=year, month=month, _external=True) }}" />
+{%- endblock %}
 
-      {% block main %}
-        {% include theme('article_lists.html') %}
-      {% endblock %}
+{% block main %}
+  {% include theme('mobile/article_lists.html') %}
+{% endblock %}
 
