--- a/app/themes/imtx/templates/mobile/errors/403.html
+++ b/app/themes/imtx/templates/mobile/errors/403.html
@@ -3,8 +3,6 @@
 {% block title %}Forbidden{% endblock %}
 
 {% block main %}
-<div class="narrowcolumn" id="content">
-  <h2 class="center">Error 403 - Forbidden</h2>
-</div>
+  <h2 class="t1">Error 403 - Forbidden</h2>
 {% endblock %}
 
