--- a/app/themes/imtx/static/mobile/css/style.css
+++ b/app/themes/imtx/static/mobile/css/style.css
@@ -1,643 +1,35 @@
 @charset "utf-8";
-	body {
-	font-size:12px;
-	font-family:'Droid Sans','Lucida Sans',Verdana,Arial,Helvetica,Sans-serif;
-	background:#5d6e81;
-	color:#505050;
-	margin:0;
-	padding:0;
-	text-align:center
-}
-
-@font-face {
-  font-family: 'Droid Sans';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Droid Sans'), local('DroidSans'), url(../fonts/Droid_Sans.woff) format('woff');
-}
-
-@font-face {
-  font-family: 'Nobile';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Nobile'), local('Nobile-Regular'), url(../fonts/Nobile.woff) format('woff');
-}
-
-#bgcontain {
-	width:818px;
-	background:#FFF;
-	border-left:10px solid #405062;
-	border-right:10px solid #405062;
-	margin:0 auto;
-	text-align:left
-}
-.contain {
-	padding:0 22px
-}
-.clear {
-	clear:both
-}
-.clearfix:before,.clearfix:after {
-	content:"";
-	display:table
-}
-.clearfix:after {
-	clear:both
-}
-.clearfix {
-	zoom:1
-}
-.none {
-	display:none
-}
-.center {
-	text-align:center
-}
-hr {
-	display:none
-}
-a img {
-	border:0
-}
-.logo {
-	background:url("../images/logo.png") no-repeat;
-	margin:0;
-	padding:15px 0 0;
-	height:91px;
-	width:199px;
-	float:left;
-	/*font-size:1px*/
-}
-.logo a,.logo a:hover {
-	display:block;
-	width:199px;
-	height:85px;
-	color:#fff
-}
-h2 {
-	margin:20px 0;
-	color:#0954a6
-}
-h2.pagetitle {
-	margin-top:25px;
-	text-align:center
-}
-h3 {
-	padding:0;
-	margin:10px 0;
-	font-size:18px;
-	color:#6492c2
-}
-h3.comments {
-	padding:0;
-	margin:30px 0 0
-}
-a,h2 a:hover,h3 a:hover {
-	color:#06c;
-	text-decoration:none
-}
-h4 {
-	color:#f06;
-	font-size:16px
-}
-h5 {
-	color:#369;
-	font-size:14px
-}
-h6 {
-	color:#390;
-	font-size:14px
-}
-a:hover {
-	color:#147;
-	text-decoration:underline
-}
-#header {
-	background:#FFF url("../images/headerbg.gif") repeat-x;
-	padding:0 22px;
-	margin:0;
-	height:106px
-}
-#header form {
-	float:right;
-	margin-top:62px
-}
-#header form input {
-	border:1px solid #0954a6;
-	background:#8db3dd;
-	height:14px;
-	padding:2px 0 2px 4px;
-	width:128px;
-	font-size:12px;
-	color:#0954a6;
-	font-family:Arial,Verdana,Sans-serif
-}
-#header form input:focus {
-	border:1px solid #0954a6;
-	background:#fff;
-	height:14px;
-	padding:2px 0 2px 4px;
-	width:128px;
-	font-size:12px;
-	color:#0954a6;
-	/*font-family:Arial,Verdana,Sans-serif*/
-}
-#header form input#searchsubmit {
-    background:url(../images/search.gif) no-repeat;
-	border:0;
-    cursor:pointer;
-	width:64px;
-	height:20px;
-	padding:0;
-	margin:0!important;
-	margin:0 0 1px;
-	vertical-align:bottom
-}
-#menu {
-	background:url("../images/menubg.gif");
-	height:33px;
-	padding:0 0 0 22px;
-	margin:0
-}
-#menu ul {
-	margin:0;
-	padding:0
-}
-#menu li {
-	list-style-type:none;
-	margin-right:20px;
-	/*line-height:33px;*/
-    padding:8px 0 9px;
-	font-size:14px;
-	font-weight:bold;
-	display:inline;
-	float:left
-}
-#menu li a {
-	color:#FFF;
-	text-decoration:none
-}
-#menu li a:hover {
-	color:#daebff
-}
-.current_page_item {
-	background:url("../images/licurrent.gif") no-repeat bottom center
-}
-#menu li#pattern {
-	float:right;
-	background:url("../images/pattern.gif");
-	margin:0;
-    padding:0;
-	width:197px;
-	height:33px
-}
-#tags {
-	font-style:italic;
-	font-weight:bold;
-	font-size:12px
-}
-#content {
-	font-size:1em
-}
-.narrowcolumn {
-	float:left;
-	padding:0 0 20px;
-	margin:0;
-	width:550px
-}
-.narrowcolumn .postmetadata {
-	padding:0
-}
-.postmetadata ul,.postmetadata li {
-	display:inline;
-	list-style-type:none
-}
-.narrowcolumn .entry {
-	line-height:20px
-}
-.narrowcolumn .entry ul li {
-	list-style-type:square
-}
-.narrowcolumn .entry ol {
-	padding-left:9px
-}
-.narrowcolumn .entry ol li {
-	list-style-type:decimal
-}
-html>body .entry ul {
-	margin-left:0;
-	padding:0 0 0 20px;
-	list-style:square;
-	/*text-indent:-10px*/
-}
-html>body .entry ol {
-	margin-left:16px;
-	padding:0 0 0 20px;
-	list-style:decimal;
-	/*text-indent:-10px*/
-}
-html>body .entry li {
-	margin:7px 0 7px 10px;
-	/*padding:0 0 0 10px*/
-}
-.even {
-	background-color:#f8f8f8;
-	border:1px solid #ddd
-}
-.odd {
-	background-color:#ebf5ff;
-	border:1px solid #c0d8f3
-}
-.entry hr {display:block; color:#f8f8f8;}
-.entry p a:visited {
-	color:#b85b5a
-}
-.entry p.meta {
-	margin:0;
-	padding:2px 0;
-	border-top:1px dotted #DDD
-}
-.entry form {
-	text-align:center
-}
-.entry h2 {font-size:18px; color:#f06; border-bottom:2px solid #ccc; 
-padding:5px 0; margin:15px 0;}
-.entry h3 {font-size:16px; color:#369; border-bottom:1px dashed #ccc;
-padding:5px 0; margin:10px 0;}
-.entry h4 {font-size:14px; color:#390; margin:10px 0;}
-.post {
-	margin:20px 0;
-	font-size:14px;
-	text-align:left
-}
-ul.date {
-	background:url("../images/databg.gif") no-repeat;
-	width:48px;
-	height:45px;
-	float:left;
-	margin:0 10px 0 0;
-	padding:0
-}
-li.day {
-	font-size:22px;
-	color:#FFF;
-	text-align:center;
-	list-style-type:none;
-	margin:3px 0 0 0
-}
-li.month {
-	font-size:12px;
-	color:#5b9300;
-	font-weight:bold;
-	text-align:center;
-	text-transform:uppercase;
-	list-style-type:none
-}
-.title {
-	/*float:left;*/
-	margin:0 0 0 48px;
-	padding:0 0 0 10px;
-}
-.topic {
-	list-style-type:none;
-    font-family: 'Nobile', sans-serif;
-	font-size:18px;
-	font-weight:bold;
-	margin:0;
-	padding-bottom:8px
-}
-.topic a:hover {
-	color:#87c71f;
-	text-decoration:none
-}
-.postmeta {
-	color:#609509;
-	list-style-type:none;
-	font-size:11px;
-	background:url("../images/smallbg.png") no-repeat top left;
-	margin:0;
-	padding-top:7px!important;
-	padding-top:5px
-}
-p img {
-	padding:0;
-	max-width:100%;
-    display:block;
-    margin-left:auto;
-    margin-right:auto;
-    height:auto;
-}
-img.centered {
-	display:block;
-	margin:0 auto
-}
-img.alignright {
-	padding:4px;
-	margin:0 0 2px 7px;
-	display:inline;
-	float:right
-}
-img.alignleft {
-	padding:4px;
-	margin:0 7px 2px 0;
-	display:inline;
-	float:left
-}
-.alignright {
-	float:right
-}
-.alignleft {
-	float:left
-}
-.navigation {
-	font-size:10px;
-	text-align:left;
-	margin-top:10px;
-	margin-bottom:60px;
-	text-transform:uppercase
-}
-.navigation a {
-	border:1px solid #70a2d9;
-	background:#9dc4ef;
-	padding:4px;
-	color:#0954a6;
-	line-height:22px
-}
-.navigation a:hover {
-	border:1px solid #f39;
-	background:#f9c;
-	padding:4px;
-	color:#c06;
-	line-height:22px;
-	text-decoration:none
-}
-.taglist li {width:28%; float:left;}
-.b-pingback {
-	border-top:1px solid #fff;
-	list-style:none;
-	margin:0 0 1px;
-	padding:10px 10px 10px 0;
-}
-.b-pingback li {
-	display:block;
-	list-style:none;
-	background:transparent url("../images/li-meta.gif") 0 2px no-repeat;
-	padding-left:10px;
-	margin:0 0 5px
-}
-.pagenavi a,.pagenavi a:link,.pagenavi a:active {
-	padding:2px 4px 2px 4px;
-	margin:2px;
-	text-decoration:none;
-	border:1px solid #06c;
-	color:#06c;
-	background-color:#fff
-}
-.pagenavi a:hover {
-	border:1px solid #147;
-	color:#147;
-	background-color:#fff
-}
-.pagenavi span.pages {
-	padding:2px 4px 2px 4px;
-	margin:2px 2px 2px 2px;
-	color:#000;
-	border:1px solid #000;
-	background-color:#fff
-}
-.pagenavi span.current {
-	padding:2px 4px 2px 4px;
-	margin:2px;
-	font-weight:bold;
-	border:1px solid #000;
-	color:#000;
-	background-color:#fff
-}
-.pagenavi span.extend {
-	padding:2px 4px 2px 4px;
-	margin:2px;
-	border:1px solid #000;
-	color:#000;
-	background-color:#fff
-}
-#sidebar {
-	padding:20px 0;
-	float:right;
-	width:200px
-}
-#sidebar h2 {
-	/*font-family:Helvetica,Arial,Verdana,Sans-serif;*/
-	font-size:1.2em;
-	margin:5px 0 0;
-	padding:0
-}
-#sidebar ul,#sidebar ul ol {
-	margin:0;
-	padding:0
-}
-#sidebar ul li {
-	list-style-type:none;
-	margin-bottom:15px
-}
-#sidebar ul li h2, #sidebar h2 {
-	background:url("../images/h2_arrow.gif") no-repeat top left;
-	border-bottom:1px solid #0954a6;
-	padding:0 0 5px 22px;
-	font-size:16px;
-	line-height:20px;
-	color:#0954a6
-}
-#sidebar ul p {
-	margin:5px 0 8px
-}
-#sidebar ul ul,#sidebar ul ol {
-	margin:8px 0 0 5px
-}
-#sidebar ul ul ul,#sidebar ul ol {
-	margin:0 0 0 10px
-}
-#sidebar ul li,#sidebar ol li {
-	background:url("../images/arrow.gif") no-repeat left top;
-	margin:4px 0;
-	padding:0 0 0 12px;
-	height:15px;
-	line-height:15px!important;
-	line-height:14px;
-	overflow:hidden
-}
-#sidebar ul li a,#sidebar ol li a {
-	color:#609509
-}
-#sidebar ul li a:hover,#sidebar ol li a:hover {
-	color:#fff;
-	background:#609509;
-	text-decoration:none
-}
-blockquote {
-	margin:15px 30px 0 10px;
-	padding-left:20px;
-	border-left:5px solid #ddd
-}
-code, pre {
-    font-family: Monaco,Menlo,"Courier New",monospace;
-    white-space: pre-wrap;
-    font-size: 12px;
-}
-code {
-	/*display:block;*/
-    background:#f0f0f0;
-	border:1px solid #e2e2e2;
-    border-radius:3px 3px 3px 3px; 
-    color:#222;
-	padding:1px 3px;
-	margin:0 2px;
-}
-blockquote cite {
-	margin:5px 0 0;
-	display:block
-}
-#footer {
-	background:#0954a6;
-	border-top:3px solid #b8ed63;
-	padding:0;
-	margin:0 auto;
-	width:818px;
-	clear:both
-}
-#footer p {
-	color:#FFF;
-	font-size:12px;
-	margin:0;
-	padding:8px 0;
-	text-align:center
-}
-#footer p a {
-	color:#FFF
-}
-.twitter {
-	margin-top:10px;
-	background:url("../images/twitter-logo.png") no-repeat top left;
-	padding:8px 0 0 36px;
-	height:32px;
-	display:block
-}
-.rss {
-	margin-top:10px;
-	background:url("../images/rss-logo.png") no-repeat top left;
-	padding:8px 0 0 36px;
-	height:32px;
-	display:block
-}
-
-/* high light begin */
-pre>code {background:none; border:none; margin:0; padding:0;}
-pre {border:1px solid #D7EAED !important; margin:15px 0 0; padding:4px; 
-    overflow:auto; background:url(../images/code.png) repeat; 
-    border-radius:1px 1px 1px 1px; }
-.codehilite .hll { background-color: #ffffcc; }
-.codehilite .c { color: #408080; font-style: italic } /* Comment */
-.codehilite .err { border: 1px solid #FF0000 } /* Error */
-.codehilite .k { color: #008000; font-weight: bold } /* Keyword */
-.codehilite .o { color: #666666 } /* Operator */
-.codehilite .cm { color: #408080; font-style: italic } /* Comment.Multiline */
-.codehilite .cp { color: #BC7A00 } /* Comment.Preproc */
-.codehilite .c1 { color: #408080; font-style: italic } /* Comment.Single */
-.codehilite .cs { color: #408080; font-style: italic } /* Comment.Special */
-.codehilite .gd { color: #A00000 } /* Generic.Deleted */
-.codehilite .ge { font-style: italic } /* Generic.Emph */
-.codehilite .gr { color: #FF0000 } /* Generic.Error */
-.codehilite .gh { color: #000080; font-weight: bold } /* Generic.Heading */
-.codehilite .gi { color: #00A000 } /* Generic.Inserted */
-.codehilite .go { color: #888888 } /* Generic.Output */
-.codehilite .gp { color: #000080; font-weight: bold } /* Generic.Prompt */
-.codehilite .gs { font-weight: bold } /* Generic.Strong */
-.codehilite .gu { color: #800080; font-weight: bold } /* Generic.Subheading */
-.codehilite .gt { color: #0044DD } /* Generic.Traceback */
-.codehilite .kc { color: #008000; font-weight: bold } /* Keyword.Constant */
-.codehilite .kd { color: #008000; font-weight: bold } /* Keyword.Declaration */
-.codehilite .kn { color: #008000; font-weight: bold } /* Keyword.Namespace */
-.codehilite .kp { color: #008000 } /* Keyword.Pseudo */
-.codehilite .kr { color: #008000; font-weight: bold } /* Keyword.Reserved */
-.codehilite .kt { color: #B00040 } /* Keyword.Type */
-.codehilite .m { color: #666666 } /* Literal.Number */
-.codehilite .s { color: #BA2121 } /* Literal.String */
-.codehilite .na { color: #7D9029 } /* Name.Attribute */
-.codehilite .nb { color: #008000 } /* Name.Builtin */
-.codehilite .nc { color: #0000FF; font-weight: bold } /* Name.Class */
-.codehilite .no { color: #880000 } /* Name.Constant */
-.codehilite .nd { color: #AA22FF } /* Name.Decorator */
-.codehilite .ni { color: #999999; font-weight: bold } /* Name.Entity */
-.codehilite .ne { color: #D2413A; font-weight: bold } /* Name.Exception */
-.codehilite .nf { color: #0000FF } /* Name.Function */
-.codehilite .nl { color: #A0A000 } /* Name.Label */
-.codehilite .nn { color: #0000FF; font-weight: bold } /* Name.Namespace */
-.codehilite .nt { color: #008000; font-weight: bold } /* Name.Tag */
-.codehilite .nv { color: #19177C } /* Name.Variable */
-.codehilite .ow { color: #AA22FF; font-weight: bold } /* Operator.Word */
-.codehilite .w { color: #bbbbbb } /* Text.Whitespace */
-.codehilite .mf { color: #666666 } /* Literal.Number.Float */
-.codehilite .mh { color: #666666 } /* Literal.Number.Hex */
-.codehilite .mi { color: #666666 } /* Literal.Number.Integer */
-.codehilite .mo { color: #666666 } /* Literal.Number.Oct */
-.codehilite .sb { color: #BA2121 } /* Literal.String.Backtick */
-.codehilite .sc { color: #BA2121 } /* Literal.String.Char */
-.codehilite .sd { color: #BA2121; font-style: italic } /* Literal.String.Doc */
-.codehilite .s2 { color: #BA2121 } /* Literal.String.Double */
-.codehilite .se { color: #BB6622; font-weight: bold } /* Literal.String.Escape */
-.codehilite .sh { color: #BA2121 } /* Literal.String.Heredoc */
-.codehilite .si { color: #BB6688; font-weight: bold } /* Literal.String.Interpol */
-.codehilite .sx { color: #008000 } /* Literal.String.Other */
-.codehilite .sr { color: #BB6688 } /* Literal.String.Regex */
-.codehilite .s1 { color: #BA2121 } /* Literal.String.Single */
-.codehilite .ss { color: #19177C } /* Literal.String.Symbol */
-.codehilite .bp { color: #008000 } /* Name.Builtin.Pseudo */
-.codehilite .vc { color: #19177C } /* Name.Variable.Class */
-.codehilite .vg { color: #19177C } /* Name.Variable.Global */
-.codehilite .vi { color: #19177C } /* Name.Variable.Instance */
-.codehilite .il { color: #666666 } /* Literal.Number.Integer.Long */
-/* end */
-
-/* goto top button */
-.top-btn {
-    -moz-transition: all 0.5s ease-out 0.1s;
-    background: url("../images/top.png") no-repeat scroll 0 0 transparent;
-    border-radius: 3px 3px 3px 3px;
-    bottom: 10px;
-    cursor: pointer;
-    height: 34px;
-    opacity: 0;
-    position: fixed;
-    left:50%;
-    margin-left:365px;
-    /*right: 10px;*/
-    width: 33px;
-}
-.top-btn.on:hover {
-    opacity: 1;
-}
-.top-btn.on {
-    opacity: 0.5;
-}
-
-/*-----------------------------侧栏跟随-----------------------------*/
-#box{float:left;position:relative;width:200px;}
-.div1{width:200px;}
-.div2{position:fixed;_position:absolute;top:0;z-index:250;}
-/* end */
-
-/* for mobile devices */
-/* 当浏览器的可视区域小于650px */
-@media screen and (max-width: 650px) {
-    #bgcontain {width:auto; max-width:100%;}
-    .logo {float:none;}
-    #header form {display:none; float:none;}
-    #menu li#pattern {display:none;}
-    .narrowcolumn {float:none; width:auto; max-width:100%;}
-    .post {max-width:100%;}
-    #sidebar {float:none; max-width:100%; width:auto;}
-    #footer {width:auto; max-width:100%}
-    .codehilite {width:auto; max-width:100%; }
-    .top-btn {left:auto; margin-left:0; right:15px; bottom:5px; }
-	#box{float:none; width:auto; max-width:100%;}
-	.div1{width:auto; max-width:100%}
-}
+body,ul,ol,form{margin:0 0;padding:0 0}
+body{font:16px/1.4 Arial,sans-serif;color:#222;} a{font-size:1.1em;}
+ul,ol{list-style:none}
+ol li{list-style-type:decimal}
+h1{background:#fefeff;font-size:large;border-bottom:2px solid #00aad5}
+h2,h3{font-size:medium} h1,h2,h3,div,li,p{margin:0 0;padding:2px 2px;}
+h2,li,.t2{border-bottom:1px solid #ccc}.t2{background:#d9f4f4;}
+h2.t1{background:#C2EFEF} h2 b{color: #FF6347}
+h3{color:#000;}
+div{display: block;} div.nav,div.adm{color:#666;margin:1px 2px;}
+a:link{color:#369;text-decoration:none}a:visited{color:#669;text-decoration:none}
+a:hover{color:#fff;text-decoration:none;background:#00a8d2}a:active{color:#fff;text-decoration:none;background:#f93}
+b{color:#ddd;margin: 0 3px;}
+.h{background:#fefeff;color:#333;margin:1px 2px;}
+.n{border:1px solid #ffed00;background:#fffcaa}
+.a,.stamp,#ft,#m h3,#m li{color:#666;font-size:small;margin:2px;}
+.t{color:#666;margin:3px;text-align:left;}
+.s, .content{word-break:break-all;word-wrap:break-word;}
+.content p, .content h2, .content h3 {margin:0.8em 0;}
+.content ul, .content ol {margin:0 0 0 2em;}
+.content li {list-style-type:square; border:none;}
+.content li p {margin:0;}
+.content ol li {list-style-type:decimal;}
+.content h3 {font-size:1em;}
+.content a {font-size:1em;}
+.i{width:78%;padding:2px 0;margin:auto;}
+.page{margin:5px 2px 3px -4px;} .page a, .page span{margin:0 4px;padding:0 4px;}
+.pager_curpage {background:#00a8d2; color:#fff;}
+pre,blockquote{background:#F4F4F4;border-left:5px solid #ececec;margin:5px 3px;padding:5px;}
+pre{background:#F3F7F7;border-left:5px solid #D9F8F8;}
+table{border-collapse:collapse;}
+input[type="submit"]{font-size:1.2em;}textarea{height:60%;}
+img{max-width:88%;}
+/*last-modified: 2014-08-11*/
