--- a/app/themes/imtx/templates/mobile/errors/404.html
+++ b/app/themes/imtx/templates/mobile/errors/404.html
@@ -3,8 +3,6 @@
 {% block title %}Oops! Page Not Found{% endblock %}
 
 {% block main %}
-<div class="narrowcolumn" id="content">
-  <h2 class="center">Error 404 - Not Found</h2>
-</div>
+  <h2 class="t1">Error 404 - Not Found</h2>
 {% endblock %}
 
