--- a/app/themes/imtx/templates/mobile/errors/500.html
+++ b/app/themes/imtx/templates/mobile/errors/500.html
@@ -3,8 +3,6 @@
 {% block title %}Internal Server Error{% endblock %}
 
 {% block main %}
-<div class="narrowcolumn" id="content">
-  <h2 class="center">Error 500 - Internal Server Error</h2>
-</div>
+  <h2 class="t1">Error 500 - Internal Server Error</h2>
 {% endblock %}
 
