--- a/app/themes/imtx/templates/mobile/index.html
+++ b/app/themes/imtx/templates/mobile/index.html
@@ -1,16 +1,15 @@
 {% extends theme('mobile/layout.html') %}
 
-{% block fulltitle %}I'm digwtx(巫拉圭){% if pagination.page>1 %}_第{{ pagination.page }}页{% endif %}{% endblock %}
-{% block keyword %}digwtx, 巫拉圭{% endblock %}
-{% block description %}这是digwtx(巫拉圭)的个人博客，记录技术资料(Linux,Slackware,Python)和生活琐事。{% endblock %}
-{% block author %}{{ config['SITE_NAME'] }}{% endblock %}
+{% block fulltitle %}{{ config['SITE_NAME'] }}{% if pagination.page>1 %}_第{{ pagination.page }}页{% endif %}{% endblock %}
+{% block keyword %}{{ label('index_keywords') }}{% endblock %}
+{% block description %}{{ label('index_description') }}{% endblock %}
 
-{% block head_extend %}
-    <link rel="canonical" href="{{ url_for('main.index', _external=True) }}" >
+{% block head_extend -%}
+  <link rel="canonical" href="{{ url_for('main.index', _external=True) }}" />
+{%- endblock %}
+
+{% block main %}
+  <form action="{{ url_for('main.search') }}" method="get">    <div class="srh">	<input type="hidden" name="act" value="Search">    <input type="search" class="i" name="keyword" value="" id="keyword">   <input type="submit" name="submit" value="搜">    </div></form>
+  {% include theme('mobile/article_lists.html') %}
 {% endblock %}
-
-        {% block main %}
-          {% include theme('article_lists.html') %}
-        {% endblock %}
-
 
