--- a/app/themes/imtx/templates/index.html
+++ b/app/themes/imtx/templates/index.html
@@ -1,16 +1,17 @@
 {% extends theme('layout.html') %}
 
-{% block fulltitle %}I'm digwtx(巫拉圭){% if pagination.page>1 %}_第{{ pagination.page }}页{% endif %}{% endblock %}
-{% block keyword %}digwtx, 巫拉圭{% endblock %}
-{% block description %}这是digwtx(巫拉圭)的个人博客，记录技术资料(Linux,Slackware,Python)和生活琐事。{% endblock %}
+{% block fulltitle %}{{ config['SITE_NAME'] }}{% if pagination.page>1 %}_第{{ pagination.page }}页{% endif %}{% endblock %}
+{% block keywords %}{{ label('index_keywords') }}{% endblock %}
+{% block description %}{{ label('index_description') }}{% endblock %}
 {% block author %}{{ config['SITE_NAME'] }}{% endblock %}
 
-{% block head_extend %}
-    <link rel="canonical" href="{{ url_for('main.index', _external=True) }}" >
+{% block head_extend -%}
+  <link rel="canonical" href="{{ url_for('main.index', _external=True) }}" />
+  <meta name="mobile-agent" content="format=html5;url={{ url_for('main.index', _external=True) }}"/>
+  <meta name="mobile-agent" content="format=xhtml;url={{ url_for('main.index', _external=True) }}"/>
+{%- endblock %}
+
+{% block main %}
+  {% include theme('article_lists.html') %}
 {% endblock %}
-
-        {% block main %}
-          {% include theme('article_lists.html') %}
-        {% endblock %}
-
 
