--- a/app/themes/imtx/templates/archives.html
+++ b/app/themes/imtx/templates/archives.html
@@ -2,8 +2,8 @@
 
 {% block title %}Monthly Archives: {{ year }}-{{ month }}{% if pagination.page>1 %}_第{{ pagination.page }}页{% endif %}{% endblock %}
 
-{% block head_extend %}
-    <link rel="canonical" href="{{ url_for('main.archives', year=year, month=month, _external=True) }}" >
+{% block head_extend -%}
+  <link rel="canonical" href="{{ url_for('main.archives', year=year, month=month, _external=True) }}" />
 {% endblock %}
 
       {% block main %}
