增加首页title自定义功能
可在静态标签中通过`index_title`设置

--- a/app/themes/imtx/templates/index.html
+++ b/app/themes/imtx/templates/index.html
@@ -1,6 +1,6 @@
 {% extends theme('layout.html') %}
 
-{% block fulltitle %}{{ config['SITE_NAME'] }}{% if pagination.page>1 %}_第{{ pagination.page }}页{% endif %}{% endblock %}
+{% block fulltitle %}{{ label('index_title') or config['SITE_NAME'] }}{% if pagination.page>1 %}_第{{ pagination.page }}页{% endif %}{% endblock %}
 {% block keywords %}{{ label('index_keywords') }}{% endblock %}
 {% block description %}{{ label('index_description') }}{% endblock %}
 {% block author %}{{ config['SITE_NAME'] }}{% endblock %}
