--- a/app/themes/imtx/templates/mobile/index.html
+++ b/app/themes/imtx/templates/mobile/index.html
@@ -1,7 +1,7 @@
 {% extends theme('mobile/layout.html') %}
 
-{% block fulltitle %}{{ config['SITE_NAME'] }}{% if pagination.page>1 %}_第{{ pagination.page }}页{% endif %}{% endblock %}
-{% block keyword %}{{ label('index_keywords') }}{% endblock %}
+{% block fulltitle %}{{ label('index_title') or config['SITE_NAME'] }}{% if pagination.page>1 %}_第{{ pagination.page }}页{% endif %}{% endblock %}
+{% block keywords %}{{ label('index_keywords') }}{% endblock %}
 {% block description %}{{ label('index_description') }}{% endblock %}
 
 {% block head_extend -%}
