--- a/app/themes/imtx/templates/mobile/article.html
+++ b/app/themes/imtx/templates/mobile/article.html
@@ -45,5 +45,5 @@
 
 {% endblock %}
 
-{% block nav %}{{ nav_by_category(article.category) }}正文{% endblock %}
+{% block nav %}{{ nav_by_category(article.category) }}<b>&#187;</b>正文{% endblock %}
 
