--- a/app/themes/imtx/templates/mobile/category.html
+++ b/app/themes/imtx/templates/mobile/category.html
@@ -12,5 +12,5 @@
   {% include theme('mobile/article_lists.html') %}
 {% endblock %}
 
-{% block nav %}{{ nav_by_category(category) }}列表{% endblock %}
+{% block nav %}{{ nav_by_category(category) }}{% endblock %}
 
