--- a/app/themes/imtx/templates/mobile/search.html
+++ b/app/themes/imtx/templates/mobile/search.html
@@ -5,6 +5,8 @@
 {% block main %}
   <h2 class="t1">搜索 <b>{{ keyword }}</b> 的结果</h2>
   <form action="{{ url_for('main.search') }}" method="get">    <div class="srh">	<input type="hidden" name="act" value="Search">    <input type="search" class="i" name="keyword" value="" id="keyword">   <input type="submit" name="submit" value="搜">    </div></form>
-
+  <hr style="color:#ccc;"/>
   {% include theme('mobile/article_lists.html') %}
 {% endblock %}
+
+{% block nav %}<b>&#187;</b>搜索{% endblock %}
