--- a/app/themes/imtx/templates/tags.html
+++ b/app/themes/imtx/templates/tags.html
@@ -10,7 +10,7 @@
 
 {% block main %}
 <div class="post">
-  <h2 class="pagetitle">标签</h2>
+  <h2 class="">标签</h2>
   <div class="entry">
     <ul class="taglist clearfix">
     {% for tag in tag_lists() -%}
