--- a/app/themes/imtx/templates/article_lists.html
+++ b/app/themes/imtx/templates/article_lists.html
@@ -1,7 +1,9 @@
+{% if category %}<h2 class="">Category Archives: {{ category.name }}</h2>{% endif %}
+{% if tag %}<h2 class="">Tag Archives: {{ tag.name }}</h2>{% endif %}
+{% if topic %}<h2 class="">Topic Archives: {{ topic.name }}</h2>{% endif %}
+{% if year or month %}<h2 class="">Monthly Archives: {{ year }}-{{ month }}</h2>{% endif %}
+
 {% if articles %}
-{% if category %}<h2 class="pagetitle">Category Archives: {{ category.name }}</h2>{% endif %}
-{% if tag %}<h2 class="pagetitle">Tag Archives: {{ tag.name }}</h2>{% endif %}
-{% if year or month %}<h2 class="pagetitle">Monthly Archives: {{ year }}-{{ month }}</h2>{% endif %}
 {% for article in articles %}
 <div class="post" id="article-{{ article.id }}">
   <ul class="date">
