--- a/app/themes/imtx/templates/layout.html
+++ b/app/themes/imtx/templates/layout.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="{% block keywords %}{% endblock %}" />
     <meta name="description" content="{% block description %}{% endblock %}" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0;" />
-    <link rel="shortcut icon" href="{{ theme_static('favicon.png') }}" />
+    <link rel="shortcut icon" href="/favicon.ico" />
     <link href="{{ url_for('main.feed') }}" rel="alternate" type="application/atom+xml" />
     <link href="{{ theme_static('css/style.css') }}" rel="stylesheet" type="text/css" media="all" />
     {% block head_extend %}{% endblock %}
